added high res background image

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 
 body {
-  background-image: url('movie-theater-curtains.jpg');
+  background-image: url('curtain-high-res.png');
   height: 100vh;
   width: 100vw;
 }
